# benchmatrix

./: .dockerignore  .editorconfig  .gitignore  .markdownlint-cli2.yaml  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  RELEASING.md  SECURITY.md  cspell.json  mkdocs.yml  noxfile.py  package-lock.json  package.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml  labeler.yml  labels.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docker.yml  docs.yml  draft-release.yml  release-verify.yml  release.yml  scorecard.yml  workflow-lint.yml
docs/: development.md  index.md
docs/_scripts/: gen_api_reference.py
docs/explanation/: ai.md  architecture.md  dependency-policy.md  deployment-environments.md  deprecations.md  first-release.md  github-actions-security.md  index.md  license-policy.md  lifecycle.md  performance.md  publishing.md  repository-health.md  repository-settings.md  secrets.md  threat-model.md
docs/how-to/: create-benchmark-matrix.md  index.md  parse-results.md  run-with-docker.md  troubleshooting.md
docs/project/: development.md  index.md
docs/reference/: compatibility.md  configuration.md  index.md
docs/runbooks/: container-release.md  dependency-update.md  failed-ci.md  incident-response.md  index.md  ownership-transfer.md  release.md  repository-setup.md  security-report.md
docs/tutorials/: first-benchmark.md  index.md
examples/: README.md  test_factorial_benchmarks.py  test_factorial_benchmarks_simplified.py
notebooks/: demo.ipynb
scripts/: check-github-environments.mjs  create_release_pr.py  create_release_tag.py  prepare_release.py  release_preflight.py
src/benchkit/: __init__.py  _schema.py  bench_harness.py  bench_results.py  exceptions.py
src/benchmatrix/: __init__.py  _schema.py  bench_harness.py  bench_results.py  exceptions.py
tests/: test_bench_harness.py  test_bench_results.py  test_create_release_pr.py  test_create_release_tag.py  test_environment.py  test_examples.py  test_integration.py  test_prepare_release.py  test_properties.py  test_public_api.py  test_release_preflight.py
tests/fixtures/benchmark_results/: invalid_tail_missing_data.json  mixed_metrics.json
