[project]
name = "benchmatrix"
version = "0.1.0"
description = "A pytest-benchmark matrix, metadata, and JSON results layer."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
authors = [
    { name = "Ryan Wallace", email = "ryancswallace@gmail.com" },
]
maintainers = [
    { name = "Ryan Wallace", email = "ryancswallace@gmail.com" },
]
keywords = [
    "benchmark",
    "benchmarking",
    "performance",
    "pytest",
    "pytest-benchmark",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest",
    "pytest-benchmark",
]

[project.urls]
Homepage = "https://github.com/ryancswallace/benchmatrix"
Changelog = "https://github.com/ryancswallace/benchmatrix/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ryancswallace/benchmatrix#readme"
Issues = "https://github.com/ryancswallace/benchmatrix/issues"
Source = "https://github.com/ryancswallace/benchmatrix"

[dependency-groups]
dev = [
    "basedpyright>=1.39.8",
    "build>=1.5.0",
    "hypothesis>=6.148.0",
    "numpy>=2.2.6",
    "pre-commit>=4.6.0",
    "pytest",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
    "ruff",
    "twine>=6.2.0",
]

[tool.uv]
link-mode = "copy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmatrix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--cov=benchmatrix",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]
markers = [
    "integration: tests that exercise installed packages or third-party runtime integrations",
    "numpy: tests that require NumPy",
    "property: property-based tests powered by Hypothesis",
    "slow: tests that do packaging, subprocess, or otherwise slower work",
    "unit: fast isolated tests for local package behavior",
]

[tool.coverage.run]
branch = true
source = ["benchmatrix"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
line-ending = "lf"
