[project]
name = "benchmatrix"
version = "0.1.0"
description = "A pytest-benchmark matrix, metadata, and JSON results layer."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
authors = [
    { name = "Ryan Wallace", email = "ryancswallace@gmail.com" },
]
maintainers = [
    { name = "Ryan Wallace", email = "ryancswallace@gmail.com" },
]
keywords = [
    "benchmark",
    "benchmarking",
    "performance",
    "pytest",
    "pytest-benchmark",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest",
    "pytest-benchmark",
]

[project.urls]
Homepage = "https://github.com/ryancswallace/benchmatrix"
Changelog = "https://github.com/ryancswallace/benchmatrix/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ryancswallace/benchmatrix#readme"
Issues = "https://github.com/ryancswallace/benchmatrix/issues"
Source = "https://github.com/ryancswallace/benchmatrix"

[dependency-groups]
dev = [
    "bandit[toml]>=1.9.4",
    "basedpyright>=1.39.8",
    "build>=1.5.0",
    "cyclonedx-bom>=7.3.0",
    "deptry>=0.25.1",
    "detect-secrets>=1.5.0",
    "hypothesis>=6.148.0",
    "numpy>=2.2.6",
    "pip-audit>=2.10.1",
    "pre-commit>=4.6.0",
    "pytest-cov>=7.1.0",
    "ruff",
    "twine>=6.2.0",
]

[tool.uv]
link-mode = "copy"
required-version = ">=0.11.21,<0.12"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGELOG.md",
    "/CITATION.cff",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/LICENSE",
    "/README.md",
    "/RELEASING.md",
    "/SECURITY.md",
    "/examples",
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/benchmatrix"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
strict_config = true
strict_markers = true
xfail_strict = true
required_plugins = [
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
]
addopts = [
    "-ra",
    "--cov=benchmatrix",
    "--cov-report=term-missing",
]
markers = [
    "integration: tests that exercise installed packages or third-party runtime integrations",
    "numpy: tests that require NumPy",
    "property: property-based tests powered by Hypothesis",
    "slow: tests that do packaging, subprocess, or otherwise slower work",
    "unit: fast isolated tests for local package behavior",
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["benchmatrix"]

[tool.coverage.report]
fail_under = 95
precision = 2
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["benchmatrix"]

[tool.ruff.format]
line-ending = "lf"

[tool.basedpyright]
include = ["src", "tests", "examples"]
exclude = [".venv", "build", "dist", "node_modules"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.deptry]
ignore_notebooks = true
known_first_party = ["benchmatrix"]

[tool.deptry.per_rule_ignores]
# pytest-benchmark supplies the benchmark fixture as a pytest plugin; the
# dependency is intentionally not imported directly by benchmatrix.
DEP002 = ["pytest-benchmark"]
