[project]
name = "benchmatrix"
version = "0.1.0"
description = "A pytest-benchmark matrix, metadata, and JSON results layer."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
authors = [
    { name = "Ryan Wallace", email = "ryancswallace@gmail.com" },
]
maintainers = [
    { name = "Ryan Wallace", email = "ryancswallace@gmail.com" },
]
keywords = [
    "benchmark",
    "benchmarking",
    "performance",
    "pytest",
    "pytest-benchmark",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=9.1.1",
    "pytest-benchmark>=5.2.3",
]

[project.urls]
Homepage = "https://github.com/ryancswallace/benchmatrix"
Changelog = "https://github.com/ryancswallace/benchmatrix/blob/main/CHANGELOG.md"
Documentation = "https://github.com/ryancswallace/benchmatrix#readme"
Issues = "https://github.com/ryancswallace/benchmatrix/issues"
Source = "https://github.com/ryancswallace/benchmatrix"

[dependency-groups]
test = [
    "hypothesis>=6.155.7",
    "numpy>=2.2.6",
    "pytest-cov>=7.1.0",
]
lint = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.18",
]
type = [
    "basedpyright>=1.39.8",
]
docs = [
    "linkchecker>=10.6.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.30.0",
]
security = [
    "bandit[toml]>=1.9.4",
    "deptry>=0.25.1",
    "detect-secrets>=1.5.0",
    "pip-audit>=2.10.1",
    "zizmor>=1.26.1",
]
release = [
    "build>=1.5.0",
    "cyclonedx-bom>=7.3.0",
    "twine>=6.2.0",
]
automation = [
    "nox>=2026.4.10",
]
dev = [
    { include-group = "automation" },
    { include-group = "docs" },
    { include-group = "lint" },
    { include-group = "release" },
    { include-group = "security" },
    { include-group = "test" },
    { include-group = "type" },
]

[tool.uv]
link-mode = "copy"
required-version = ">=0.11.8,<0.12"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGELOG.md",
    "/CITATION.cff",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/docs",
    "/LICENSE",
    "/mkdocs.yml",
    "/noxfile.py",
    "/README.md",
    "/RELEASING.md",
    "/SECURITY.md",
    "/examples",
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/benchmatrix"]

[tool.pytest.ini_options]
minversion = "8.4"
testpaths = ["tests"]
pythonpath = ["src"]
xfail_strict = true
required_plugins = [
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.1.0",
]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=benchmatrix",
    "--cov-report=term-missing",
]
markers = [
    "integration: tests that exercise installed packages or third-party runtime integrations",
    "numpy: tests that require NumPy",
    "property: property-based tests powered by Hypothesis",
    "slow: tests that do packaging, subprocess, or otherwise slower work",
    "unit: fast isolated tests for local package behavior",
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["benchmatrix"]

[tool.coverage.report]
fail_under = 95
precision = 2
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["benchmatrix"]

[tool.ruff.format]
line-ending = "lf"

[tool.basedpyright]
include = ["src", "tests", "examples", "noxfile.py"]
exclude = [".venv", "build", "dist", "node_modules"]
pythonVersion = "3.11"
typeCheckingMode = "standard"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.deptry]
ignore_notebooks = true
known_first_party = ["benchmatrix"]

[tool.deptry.per_rule_ignores]
# pytest-benchmark supplies the benchmark fixture as a pytest plugin; the
# dependency is intentionally not imported directly by benchmatrix.
DEP002 = ["pytest-benchmark"]
